--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,14 @@
 	    <version>3.11.0</version>
 	</dependency>
 	
+<!-- 	Dependencia da leitura do Excel -->
+
+	<dependency>
+		<groupId>org.apache.poi</groupId>
+		<artifactId>poi-ooxml</artifactId>
+		<version>3.17</version>
+	</dependency>
+	
     
   </dependencies>
 </project>
