--- a/pom.xml
+++ b/pom.xml
@@ -3,14 +3,14 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>br.com.sambatech</groupId>
-  <artifactId>avaliacao</artifactId>
+  <artifactId>avaliacaoSambatech</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>avaliacao</name>
+  <name>avaliacaoSambatech</name>
   <url>http://maven.apache.org</url>
 
-  <properties>
+   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
@@ -40,7 +40,32 @@
 		<artifactId>poi-ooxml</artifactId>
 		<version>3.17</version>
 	</dependency>
-	
-    
   </dependencies>
+  
+  <build>
+  	<plugins>
+	  	<plugin>
+<!-- 	        <groupId>org.apache.maven.plugins</groupId> -->
+	        <artifactId>maven-compiler-plugin</artifactId>
+<!-- 	         <version>3.7.0</version> -->
+	        <configuration>
+	          <source>1.8</source>
+	          <target>1.8</target>
+	        </configuration>
+      </plugin>
+	  	
+  		<plugin>
+  			<groupId>org.apache.maven.plugins</groupId>
+  			<artifactId>maven-surefire-plugin</artifactId>
+  			<version>2.20.1</version>
+  			<dependencies>
+		      <dependency>
+		        <groupId>org.apache.maven.surefire</groupId>
+		        <artifactId>surefire-junit47</artifactId>
+		        <version>2.20.1</version>
+		      </dependency>
+		    </dependencies>
+  		</plugin>
+  	</plugins>
+  </build>
 </project>
